fixed edit, save, and bg image